--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -26,7 +26,7 @@
 
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #97ffff;
+  /* color: #97ffff; */
   opacity: 1; /* Firefox */
 }
 
