--- a/src/components/styles/StayConnected.css
+++ b/src/components/styles/StayConnected.css
@@ -1,6 +1,6 @@
 .stay-connected-container {
   padding: 4rem 4rem 0rem 4rem;
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background-color: black;
   text-align: center;
 }
 
