--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -15,13 +15,15 @@
 .form-control {
   border: none;
   background: transparent;
+  padding: 1rem;
+  background-color: whitesmoke;
   outline: none;
-  border-bottom: 1px solid gray;
+  border: 1px solid gray;
+  border-radius: 11px;
   font-size: 18px;
   margin-bottom: 2rem;
-  max-width: 1620px;
+  max-width: 1320px;
   width: 70%;
-  color: white;
 }
 
 ::placeholder {
