--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,6 +1,6 @@
 .contact-container {
   padding: 4rem;
-  background: black;
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   text-align: center;
 }
 
