replaced backgrounds colors

--- a/src/components/styles/AlgorithmsSection.css
+++ b/src/components/styles/AlgorithmsSection.css
@@ -1,6 +1,6 @@
 .codechallenges-container {
   padding: 4rem 2rem 4rem 2rem;
-  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   text-align: center;
 }
 
