--- a/src/components/styles/Banner.css
+++ b/src/components/styles/Banner.css
@@ -1,4 +1,5 @@
 .banner-container-wrapper {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   display: flex;
   height: 100vh;
 }
