--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,4 +1,5 @@
 .contact-container {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   padding: 4rem;
   text-align: center;
 }
