--- a/src/components/styles/Interests.css
+++ b/src/components/styles/Interests.css
@@ -1,4 +1,5 @@
 .interests-container {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   padding: 4rem 2rem 4rem 2rem;
   text-align: center;
 }
