--- a/src/components/styles/ProjectTalk.css
+++ b/src/components/styles/ProjectTalk.css
@@ -1,4 +1,5 @@
 .project-talk-container {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   padding: 4rem 4rem 0rem 4rem;
   display: flex;
   flex-direction: column;
