--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,6 +1,6 @@
 .contact-container {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  padding: 4rem;
+  padding: 4rem 4rem 10rem 4rem;
   text-align: center;
 }
 
@@ -10,6 +10,15 @@
   font-size: 3rem;
   padding-bottom: 3rem;
   color: white;
+}
+
+.contact-container-info {
+  margin: 0 auto;
+  max-width: 630px;
+}
+
+.contact-info {
+  color: #ccd6f6;
 }
 
 .form-control {
@@ -39,7 +48,7 @@
 
 @media screen and (max-width: 960px) {
   .contact-container {
-    padding: 1rem;
+    padding: 1rem 1rem 4rem 1rem;
   }
   .form-control {
     float: none;
