--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -12,7 +12,7 @@
 
 .navbar.active {
   background: black;
-  transition: all 0.5s ease;
+  transition: all 0.2s ease;
 }
 
 .navbar-container {
@@ -98,10 +98,15 @@
   }
 
   .nav-menu {
+    /* background: linear-gradient(
+      90deg,
+      rgb(28, 27, 27) 0%,
+      rgb(26, 23, 23) 100%
+    ); */
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     position: absolute;
     top: 80px;
     left: -100%;
@@ -110,11 +115,12 @@
   }
 
   .nav-menu.active {
-    background: linear-gradient(
+    /* background: linear-gradient(
       90deg,
       rgb(28, 27, 27) 0%,
       rgb(26, 23, 23) 100%
-    );
+    ); */
+    background: black;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
